--- a/src/app/component/dashboard/dashboard.component.scss
+++ b/src/app/component/dashboard/dashboard.component.scss
@@ -138,6 +138,7 @@ main {
   min-height: 90vh;
   padding: 4rem;
   width: 100%;
+  margin-left: 45px;
 }
 
 .dash-title{
@@ -202,6 +203,7 @@ background: #fff;
 .table-hover {
 width: 1200px;
 margin-bottom: 40px;
+margin-left: 150px;
 }
 
 .btn{
