--- a/src/app/component/formulario-aplicacion/formulario-aplicacion.component.html
+++ b/src/app/component/formulario-aplicacion/formulario-aplicacion.component.html
@@ -4,7 +4,7 @@
 <div class="row">
     <div class="col-lg-6 ">
         <div class="form-group">
-            <select name="modalidad" id="modalidad">
+            <select bname="modalidad" id="modalidad">
                 <option value="Adquisición de vivienda">Adquisición de vivienda</option>
                 <option value="Construcción en sitio propio">Construcción en sitio propio</option>
                 <option value="Mejoramiento de vivienda">Mejoramiento de vivienda</option>
@@ -81,7 +81,7 @@
     <div class="col-lg-3">
         <div class="form-group">
             <label for="exampleInputTitle"></label>
-            <input type="text" class="form-control" id="telefono" name="telefono" placeholder="Telefono">
+            <input type="text" class="form-control" id="telefono" name="telefono" placeholder="Teléfono">
         </div>
     </div>
 </div>
@@ -107,4 +107,4 @@
     </div>
 </div>
 
-<button type="button" (click)="generatePdf()" class="btn btn-primary btn-lg btn-block">CARGAR LOS DOCUMENTOS</button>
+<button type="button" (click)="generatePdf()" class="btn btn-primary btn-lg btn-block">CARGAR LOS DOCUMETOS</button>
